// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for large screens 1`] = `
<div
  className="Header"
>
  <div
    className="left-side-elements"
  >
    <div
      className="header-element"
    >
      <Connect(HeaderButton)
        content={<Unknown />}
        id="header-menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="header-element logo"
    >
      logo
    </div>
    <div
      className="header-element"
    >
      <Connect(SearchBar) />
    </div>
  </div>
  <div
    className="right-side-elements"
  >
    <div
      className="header-element"
    >
      <Connect(HeaderButton)
        content={<Unknown />}
        id="header-settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<Header /> renders correctly for small screens 1`] = `
<div
  className="Header"
>
  <div
    className="left-side-elements"
  >
    <div
      className="header-element"
    >
      <Connect(HeaderButton)
        content={<Unknown />}
        id="header-menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="header-element logo"
    >
      logo
    </div>
  </div>
  <div
    className="right-side-elements"
  >
    <div
      className="header-element"
    >
      <Connect(HeaderButton)
        content={<Unknown />}
        id="header-search-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="header-element"
    >
      <Connect(HeaderButton)
        content={<Unknown />}
        id="header-settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
